[tool.poetry]
name = "mongo-fastapi"
version = "0.1.0"
description = ""
authors = ["SJ van der Merwe <sj@vandermerwe.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
black = "^23.12.1"
pylint = "^3.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
